--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 .idea
+.venv
+*/.venv
+**/.vevv
+*/migrations
+**/migrations
+*/db.sqlite3
+**/db.sqlite3
+*/.env
+**/.env
 # User-specific files
 *.rsuser
 *.suo
