--- a/frontend/Chalk/Chalk.csproj
+++ b/frontend/Chalk/Chalk.csproj
@@ -20,6 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\API\API.csproj" />
       <ProjectReference Include="..\AvaUtils\AvaUtils.csproj" />
     </ItemGroup>
 </Project>
