--- a/frontend/AvaUtils/AvaUtils.csproj
+++ b/frontend/AvaUtils/AvaUtils.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
       <PackageReference Include="Avalonia" Version="11.1.0" />
       <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.1" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
     <ItemGroup>
