SQL-es hiba javítva

--- a/VS Solution/DH_EE_IKT_API/appsettings.json
+++ b/VS Solution/DH_EE_IKT_API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySQL": ""
+    "MySQL": "Server=localhost; User ID=root; Password=; Database=dheedb"
   }
 }
